--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    restart: unless-stopped
+    restart: always
     networks:
       - sticker_collector_network
 
@@ -34,7 +34,7 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
-    restart: unless-stopped
+    restart: always
     networks:
       - sticker_collector_network
 
@@ -56,7 +56,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    restart: unless-stopped
+    restart: always
     networks:
       - sticker_collector_network
 
@@ -76,7 +76,7 @@ services:
         condition: service_healthy
       db_worker:
         condition: service_started
-    restart: unless-stopped
+    restart: always
     networks:
       - sticker_collector_network
 
